@@ -41,6 +41,9 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
   o Minor bugfixes (other):
     - Stop allowing hibernating servers to be "stable" or "fast".
     - Check return values from pthread_mutex functions. 
+    - Don't save non-general-purpose router descriptors to the disk cache,
+      because we have no way of remembering what their purpose was when
+      we restart.
 
   o Minor bugfixes (controller), reported by daejees:
     - Make 'getinfo fingerprint' return a 551 error if we're not a
